--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <app-navbar></app-navbar>
   </div>
   <div class="col-md-9">
-  <h5 style="color: #6D7271; margin-top: 30px;">ჩემი ლიმიტები</h5>
+  <app-top-navbar></app-top-navbar>
   <div class="row">
     <div class="col-md-6"><app-offer-one></app-offer-one></div>
     <div class="col-md-6"><app-offer-two></app-offer-two></div>
