--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,12 +17,10 @@
             <img src="assets/icons/people.svg">
             <a  href="#">წარმომადგენლები</a>
           </li>
-          <li>
-      <a href="">
-        <img src="assets/icons/log out.svg">
-      </a>
-          </li>
+     
       </ul>
-
+      <a href="" class="belowExit">
+        <img src="assets/icons/log out.svg">გასვლა
+       </a>
   </nav>
   
