--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,5 @@
 .navbar {
+	width: 25rem;
 	height: 100vh;
 	background-color: #387d7a;
 }
@@ -7,6 +8,7 @@ nav ul li a {
 	color: white;
 	font-size: 16px;
 	vertical-align: center;
+	text-decoration: none;
 }
 
 nav ul {
@@ -16,11 +18,13 @@ nav ul {
 
 nav ul li {
 	margin-top: 20px;
+	width: 100%;
+	float: left;
 }
 
 nav ul li img {
-	width: 16px;
-	height: 16px;
+	width: 20px;
+	height: 20px;
 	margin: 10px;
 }
 
@@ -33,4 +37,17 @@ nav ul li img {
 li:hover {
 	background-color: #38aba7;
 	border-radius: 0 30px 30px 0;
+}
+
+.belowExit {
+	position: absolute;
+	bottom: 0px;
+	margin-bottom: 145px;
+	margin-left: 100px;
+	color: white;
+}
+
+.belowExit img {
+	width: 16px;
+	margin: 5px;
 }
