--- a/src/app/offer-two/offer-two.component.css
+++ b/src/app/offer-two/offer-two.component.css
@@ -7,8 +7,17 @@
 	background-position: right top;
 
 	box-shadow: 0px 0px 24px #cecece;
-	margin: 10px;
+	height: 150px;
+	margin: 5px;
 }
 
 img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 25px;
+}
+
+.mainText {
+	margin-top: 30px;
 }
