--- a/src/app/offer-two/offer-two.component.html
+++ b/src/app/offer-two/offer-two.component.html
@@ -1,13 +1,12 @@
-<div class="row offerBg">
-    <div class="col-md-3">
-        <img src="/assets/icons/icon.svg">
-    </div>
-    <div class="col-md-6">
-        <h6>ფაქტორინგული ლიმიტი</h6>
-        <p>ათვისებული თანხა 40 000 GEL</p>
-        <p>ასათვისებელი თანხა 30 000 GEL</p>
-    </div>
-    <div class="col-md-3">
-        <h5>70 000 GEL</h5>
-    </div>
+ <div class="row offerBg">
+            <div class="col-md-3">
+                <img src="/assets/icons/icon.svg"></div>
+            <div class="col-md-6 mainText">
+                <h6 style="font-size: 20px;">ფაქტორინგული ლიმიტი</h6>
+                <p>ათვისებული თანხა 40 000 GEL</p>
+                <p>ასათვისებელი თანხა 30 000 GEL</p>
+            </div>
+            <div class="col-md-3">
+                <h5 style="font-size: 25px; margin-top: 70px;">70 000 <small style="font-size: 19px;">GEL</small></h5>
+            </div>
 </div>
